[package]
name = "rc4_cipher_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts", "glow"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "rc4_cipher_app.exe"
LegalCopyright = "Copyright © 2024"

[[bin]]
name = "rc4_cipher_app"
path = "src/main.rs"

[profile.release]
opt-level = 2